# ModernScreenshot

./: .gitignore  AppConstants.cs  CaptureForm.cs  CaptureFormRefactored.cs  Cargo.toml  DrawingModels.cs  FEATURES.md  FINAL_VERIFICATION.txt  GitHub部署完成.md  LICENSE  MainForm.cs  Makefile  ModernScreenshot.csproj  ModernUI.cs  PROJECT_SUMMARY.md  PathManager.cs  PinForm.cs  PixpinUI.cs  Program.cs  README.md  README_FINAL.md  RUST_FEATURES.md  RenderHelper.cs  ScreenCaptureHelper.cs  TextInputDialog.cs  UIComponents.cs  UI现代化更新说明.md  app.manifest  build.bat  build.sh  build_rust.sh  runtimeconfig.json  setup.iss  test_compile.sh  version.json  交付清单.md  代码验证结果.txt  使用说明.md  底层实现最终确认.txt  底层实现验证.md  (+11 more)
.github/workflows/: build-release.yml  build-release.yml.disabled  build-rust.yml  build.yml  release.yml
packaging/: modern-screenshot.service
scripts/: build-windows.ps1  check-memory.sh
src/: capture.rs  capture_window.rs  drawing.rs  keys.rs  main.rs  modern_screenshot.c  modern_screenshot.manifest  modern_screenshot_win.cpp  save.rs  toolbar.rs
